--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3003",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.88.4",
     "@react-three/fiber": "^8.14.6",
+    "dotenv": "^16.4.5",
     "framer-motion": "^10.16.4",
     "maath": "^0.10.4",
     "react": "^18.2.0",
