--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "maath": "^0.10.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.17.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
